# nlp-lab-2019

./: .gitignore  NLP_lab1_regex.ipynb
lab10/: Lab10.ipynb  tmp.py
lab2/: docker-compose.yml  import.py  requests.org
lab3/: Lab3.ipynb  Untitled.ipynb  lab3.org
lab4/: Rust.ipynb  Untitled.ipynb
lab4/rust/: Cargo.toml
lab4/rust/src/: llr.rs  main.rs  pmi.rs
lab5/: Makefile  lab5.org
lab5/rust/: Cargo.toml
lab5/rust/src/: llr.rs  load_bigrams.rs  main.rs  preprocess.rs  tag.rs  utils.rs
lab6/: Untitled.ipynb
lab7/: Lab7.ipynb
lab8/: Lab8.ipynb  readme.tx
lab9/: Lab9.ipynb
