[package]
name = "rust"
version = "0.1.0"
authors = ["Jakub Darul <jakub.darul@codeheroes.io>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
reqwest = "0.9.14"

serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
regex = "1"
itertools = "0.8.0"
rand= "0.6.5"